_sass/tale/_layout.scss
.container {
  margin: 0 auto;
  max-width: $container_width;
  width: $container_width_perc;
}

main,
footer,
.nav-container {
  display: block;
  margin: 0 auto;
  max-width: $container_width;
  width: $container_width_perc;
}

@media (min-width: 600px) {
  main {
    padding-top: 1.4em;
  }
}

.nav {
  box-shadow: 0 2px 2px -2px $shadow-color;
  overflow: auto;

  &-container {
    margin: 1rem auto;
    position: relative;
    text-align: center;
  }

  &-title {
    font-size: 2.4rem;
    font-weight: $title_font_weight;
    color: $default-shade;
    @include transition(all .2s ease-out);
    display: inline-block;
    margin: 0;
    padding-right: .2rem;

    @media (max-width: 400px) {
      font-size: 2.4rem;
    }

    &:hover,
    &:focus {
      opacity: .6;
    }
  }

  ul {
    list-style-type: none;
    margin: 0.5rem 0 0;
    padding: 0;
    text-align: center;
  }

  li {
    @include transition(all .2s ease-out);
    color: $default-color;
    display: inline-block;
    opacity: .6;
    padding: 0 2rem 0 0;

    &:last-child {
      padding-right: 0;
    }

    &:hover,
    &:focus {
      opacity: 1;
    }
  }

  a {
    color: $default-color;
    font-family: $sans-serif;
  }
}

#footer_list {
  font-size: 1.6em;
  padding: 0 0 .8rem;
  margin: 0;
}

#footer_list li {
  display: inline-block;
  list-style-type: none;
  padding-left: 12px;
  padding-right: 12px;
}

#footer_list ul li a {
  color: $default-color;
  text-decoration: none;
}

@media (min-width: 600px) {
  .nav {
    &-container {
      text-align: left;
    }

    ul {
      bottom: 0;
      position: absolute;
      right: 0;
    }
  }
}

footer {
  font-family: $serif-secondary;
  padding: 1.7rem 0 2rem;
  text-align: center;

  box-shadow: inset 0 2px 2px -2px $shadow-color;
  overflow: auto;

  span {
    color: $default-color;
    font-size: 0.8rem;
  }

  .icon {
    color: $default-color;
  }
}

